# thaleia

./: .codeberg.yml  .gitignore  ARCHITECTURE.md  CHARACTER.md  COMMERCIAL-TERMS.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Containerfile.dev  LICENSE  LICENSE-COMMERCIAL  Makefile  PLAN.md  PROGRESS.md  README.md  RESEARCH.md  index.html
.forgejo/: pull_request_template.md
.forgejo/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml
crates/thaleia-cli/: Cargo.toml
crates/thaleia-cli/src/: commands.rs  main.rs
crates/thaleia-core/: Cargo.toml
crates/thaleia-core/src/: capture.rs  debug.rs  download.rs  error.rs  lib.rs  tts.rs
crates/thaleia-core/src/audio/: diagnostics.rs  engine.rs  mod.rs
crates/thaleia-core/src/audio/backends/: mod.rs  null_backend.rs  rodio_backend.rs  sdl2_backend.rs
crates/thaleia-core/src/integration/: config.rs  events.rs  mod.rs  pipeline.rs
crates/thaleia-core/src/pipeline/: events.rs  manager.rs  mod.rs  state.rs
crates/thaleia-core/src/stt/: engine.rs  mod.rs  whisper.rs
crates/thaleia-core/src/tts/: kokoro.rs
crates/thaleia-core/src/vad/: engine.rs  mod.rs  onnx.rs  silero.rs
crates/thaleia-core/src/wake_word/: config.rs  engine.rs  mod.rs
crates/thaleia-mcp/: Cargo.toml
crates/thaleia-mcp/src/: audio_manager.rs  handler.rs  lib.rs  main.rs  rmcp_server.rs  session.rs  tools.rs
crates/thaleia-mcp/tests/: rmcp_server_test.rs
scripts/container-scripts/: README.md  thaleia-stt-test  thaleia-test  thaleia-tts-test
